terraform/configs/ingress-dev.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: bookstack-https-ingressroute
  labels:
    app: bookstack
    environment: dev
    resourceType: ingressroute
  namespace: bookstack
spec:
  entrypoint:
    - websecure
  routes:
    - kind: Rule
      match: Host(`wiki.dev.example.com`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: bookstack-service
          port: 80
  tls:
    secretName: tls-cert
    option:
      - namespace: bookstack
    domain:
      - main: dev.example.com
